# altstore-repo

./: .gitignore  README.md  source.json
.github/workflows/: auto-merge-update-pr.yml  static.yml  update.yml
_site/pages/: altstore.html  sidestore.html
_site/repo/: source.json
scripts/update_repo/: pyproject.toml  update_repo.py
